# queryparser

./: Cargo.toml  README.md  columns.csv  queries.sql
.github/workflows/: ci.yml
src/: analytics.rs  main.rs  test.rs
