[package]
name = "queryparser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.2"
sqlparser = "0.41.0"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.4.0", features = ["derive"] }
